// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users delete should delete an user 1`] = `
Array [
  RowDataPacket {
    "password": "test",
    "token": "token_two",
    "userId": 2,
    "username": "two",
  },
]
`;

exports[`Users findAll should return all users 1`] = `
Array [
  RowDataPacket {
    "userId": 1,
    "username": "one",
  },
  RowDataPacket {
    "userId": 2,
    "username": "two",
  },
]
`;

exports[`Users findByIdAndUpdate should updat an user 1`] = `
Array [
  RowDataPacket {
    "password": "test",
    "token": "token_one",
    "userId": 1,
    "username": "username",
  },
  RowDataPacket {
    "password": "test",
    "token": "token_two",
    "userId": 2,
    "username": "two",
  },
]
`;

exports[`Users save should save a new user 1`] = `
Array [
  RowDataPacket {
    "password": "sdfsdfsdfsdfsdf",
    "token": "fghjkhjkhjhk",
    "userId": 3,
    "username": "testsave",
  },
]
`;
